Fixed timeline on small screens
Also added a purpose for the down arrow button

--- a/public/styles/blog_list.css
+++ b/public/styles/blog_list.css
@@ -170,6 +170,9 @@ span.stretch {
   color: white;
   font-size: 2em;
 }
+#moon-symbol:hover {
+  cursor: pointer;
+}
 #extra-timeline-spacer {
   display: none;
 }
